--- a/index.html
+++ b/index.html
@@ -5,17 +5,205 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <div class="score">Score: <span id="score">0</span></div>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <canvas id="gameCanvas"></canvas>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
-
-    
-       
-  
 </body>
 </html>
 
+<style>
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #121212;
+    font-family: 'Courier New', Courier, monospace;
+    color: #fff;
+}
+
+#gameCanvas {
+    background-color: #222;
+    border: 5px solid #444;
+    box-shadow: 0 0 20px rgba(0, 255, 0, 0.8);
+    position: relative;
+}
+
+canvas, .score {
+    z-index: 2;
+}
+
+.score {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 10px 20px;
+    border: 2px solid #444;
+    background-color: #222;
+    box-shadow: 0 0 10px rgba(0, 255, 0, 0.8);
+}
+
+.score span {
+    color: lime;
+}
+
+.snake {
+    background-color: lime;
+    box-shadow: 0 0 5px rgba(0, 255, 0, 0.8);
+}
+
+.snake-head {
+    background-color: #32CD32;
+}
+
+.food {
+    background-color: red;
+    box-shadow: 0 0 5px rgba(255, 0, 0, 0.8);
+}
+</style>
+
+<script>
+$(document).ready(function () {
+    const canvas = $("#gameCanvas")[0];
+    const ctx = canvas.getContext("2d");
+    const gridSize = 20;
+    const canvasSize = Math.min(window.innerWidth, window.innerHeight) - 40; // Dynamic canvas size for mobile
+    canvas.width = canvasSize;
+    canvas.height = canvasSize;
+    let snake = [{ x: gridSize * 2, y: 0 }, { x: gridSize, y: 0 }, { x: 0, y: 0 }];
+    let direction = "RIGHT";
+    let food = { x: gridSize * 5, y: gridSize * 5 };
+    let score = 0;
+    let touchStartX = 0, touchStartY = 0;
+
+    // Draw snake
+    function drawSnake() {
+        ctx.clearRect(0, 0, canvasSize, canvasSize);
+        for (let i = 0; i < snake.length; i++) {
+            ctx.fillStyle = i === 0 ? "#32CD32" : "lime";
+            ctx.shadowColor = "rgba(0, 255, 0, 0.8)";
+            ctx.shadowBlur = 5;
+            ctx.fillRect(snake[i].x, snake[i].y, gridSize, gridSize);
+        }
+    }
+
+    // Draw food
+    function drawFood() {
+        ctx.fillStyle = "red";
+        ctx.shadowColor = "rgba(255, 0, 0, 0.8)";
+        ctx.shadowBlur = 5;
+        ctx.fillRect(food.x, food.y, gridSize, gridSize);
+    }
+
+    // Move snake
+    function moveSnake() {
+        const head = { x: snake[0].x, y: snake[0].y };
+        if (direction === "LEFT") head.x -= gridSize;
+        if (direction === "UP") head.y -= gridSize;
+        if (direction === "RIGHT") head.x += gridSize;
+        if (direction === "DOWN") head.y += gridSize;
+
+        snake.unshift(head);
+
+        // Check if the snake has eaten the food
+        if (head.x === food.x && head.y === food.y) {
+            score++;
+            $("#score").text(score);
+            placeFood();
+        } else {
+            snake.pop();
+        }
+    }
+
+    // Place food in a random location
+    function placeFood() {
+        food.x = Math.floor(Math.random() * (canvasSize / gridSize)) * gridSize;
+        food.y = Math.floor(Math.random() * (canvasSize / gridSize)) * gridSize;
+
+        // Make sure food does not appear on the snake
+        for (let i = 0; i < snake.length; i++) {
+            if (food.x === snake[i].x && food.y === snake[i].y) {
+                placeFood();
+            }
+        }
+    }
+
+    // Check collision
+    function checkCollision() {
+        const head = snake[0];
+
+        // Check wall collision
+        if (head.x < 0 || head.x >= canvasSize || head.y < 0 || head.y >= canvasSize) {
+            return true;
+        }
+
+        // Check self collision
+        for (let i = 1; i < snake.length; i++) {
+            if (head.x === snake[i].x && head.y === snake[i].y) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    // Game over
+    function gameOver() {
+        clearInterval(gameInterval);
+        alert("Game Over! Your score is " + score);
+        location.reload();
+    }
+
+    // Change direction based on key press
+    $(document).keydown(function (e) {
+        const key = e.which;
+        if (key === 37 && direction !== "RIGHT") direction = "LEFT";
+        if (key === 38 && direction !== "DOWN") direction = "UP";
+        if (key === 39 && direction !== "LEFT") direction = "RIGHT";
+        if (key === 40 && direction !== "UP") direction = "DOWN";
+    });
+
+    // Touch controls for mobile
+    canvas.addEventListener("touchstart", function (e) {
+        touchStartX = e.touches[0].clientX;
+        touchStartY = e.touches[0].clientY;
+    });
+
+    canvas.addEventListener("touchmove", function (e) {
+        if (e.touches.length > 0) {
+            const touchEndX = e.touches[0].clientX;
+            const touchEndY = e.touches[0].clientY;
+
+            const deltaX = touchEndX - touchStartX;
+            const deltaY = touchEndY - touchStartY;
+
+            if (Math.abs(deltaX) > Math.abs(deltaY)) {
+                if (deltaX > 0 && direction !== "LEFT") direction = "RIGHT";
+                if (deltaX < 0 && direction !== "RIGHT") direction = "LEFT";
+            } else {
+                if (deltaY > 0 && direction !== "UP") direction = "DOWN";
+                if (deltaY < 0 && direction !== "DOWN") direction = "UP";
+            }
+        }
+    });
+
+    // Game loop
+    function gameLoop() {
+        moveSnake();
+        if (checkCollision()) {
+            gameOver();
+        } else {
+            drawSnake();
+            drawFood();
+        }
+    }
+
+    // Start game
+    const gameInterval = setInterval(gameLoop, 100);
+});
+</script>
