--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $(document).ready(function () {
     const canvas = $("#gameCanvas")[0];
     const ctx = canvas.getContext("2d");
     const gridSize = 20;
-    const canvasSize = Math.min(window.innerWidth, window.innerHeight) - 40; // Dynamic canvas size for mobile
+    let canvasSize = Math.min(window.innerWidth, window.innerHeight) - 40; // Dynamic canvas size
     canvas.width = canvasSize;
     canvas.height = canvasSize;
     let snake = [{ x: gridSize * 2, y: 0 }, { x: gridSize, y: 0 }, { x: 0, y: 0 }];
@@ -80,6 +80,11 @@ $(document).ready(function () {
     let food = { x: gridSize * 5, y: gridSize * 5 };
     let score = 0;
     let touchStartX = 0, touchStartY = 0;
+
+    // Prevent scrolling on touch for better gameplay experience
+    document.body.addEventListener("touchstart", function (e) {
+        e.preventDefault();
+    }, { passive: false });
 
     // Draw snake
     function drawSnake() {
@@ -174,21 +179,19 @@ $(document).ready(function () {
         touchStartY = e.touches[0].clientY;
     });
 
-    canvas.addEventListener("touchmove", function (e) {
-        if (e.touches.length > 0) {
-            const touchEndX = e.touches[0].clientX;
-            const touchEndY = e.touches[0].clientY;
+    canvas.addEventListener("touchend", function (e) {
+        const touchEndX = e.changedTouches[0].clientX;
+        const touchEndY = e.changedTouches[0].clientY;
 
-            const deltaX = touchEndX - touchStartX;
-            const deltaY = touchEndY - touchStartY;
+        const deltaX = touchEndX - touchStartX;
+        const deltaY = touchEndY - touchStartY;
 
-            if (Math.abs(deltaX) > Math.abs(deltaY)) {
-                if (deltaX > 0 && direction !== "LEFT") direction = "RIGHT";
-                if (deltaX < 0 && direction !== "RIGHT") direction = "LEFT";
-            } else {
-                if (deltaY > 0 && direction !== "UP") direction = "DOWN";
-                if (deltaY < 0 && direction !== "DOWN") direction = "UP";
-            }
+        if (Math.abs(deltaX) > Math.abs(deltaY)) {
+            if (deltaX > 0 && direction !== "LEFT") direction = "RIGHT";
+            if (deltaX < 0 && direction !== "RIGHT") direction = "LEFT";
+        } else {
+            if (deltaY > 0 && direction !== "UP") direction = "DOWN";
+            if (deltaY < 0 && direction !== "DOWN") direction = "UP";
         }
     });
 
